--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,6 +41,7 @@ requirements:
     - tensorboardx
     - protobuf >=4.22,<6.0.0
     - grpcio >=1.56.2,<1.66.0
+    - flask ==3.1.1
 
 test:
   imports:
